eager initialization of shared localstack container